<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esparza.bmiapplication.YourBMI">

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/weight"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/weightTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/get_your_bmi"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/feetET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/bmiTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        style="@style/textStyle"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/weightET"
        android:layout_alignStart="@+id/weightET" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_height"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        style="@style/textStyle"
        android:layout_below="@+id/weightET"
        android:layout_alignRight="@+id/weightET"
        android:layout_alignEnd="@+id/weightET"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_bmi"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        style="@style/textStyle"
        android:layout_below="@+id/sub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:id="@+id/feetET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/feet_num"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        style="@style/textStyle"
        android:inputType="number"
        android:layout_below="@+id/inchesTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/inchesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inches_num"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        style="@style/textStyle"
        android:ems="5"
        android:inputType="number"
        android:layout_below="@+id/inchesTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/feetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_above="@+id/feetET"
        android:layout_toLeftOf="@+id/weightET"
        android:layout_toStartOf="@+id/weightET" />

    <TextView
        android:id="@+id/inchesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inches"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/heightTV"
        android:layout_toRightOf="@+id/heightTV"
        android:layout_toEndOf="@+id/heightTV"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

</RelativeLayout>
